--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.default=local
+
 # h2 database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -11,6 +13,7 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 
 spring.sql.init.mode=never
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
