--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=sa
 
 spring.sql.init.mode=never
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -22,4 +22,4 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
 
-spring.profiles.include=local,release,oauth,jwt
+spring.profiles.include=local,release,jwt
