--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
 
 spring.profiles.include=local,release,jwt
+
+spring.servlet.multipart.max-file-size=10MB
