feat: Category 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.stat=debug
 
-spring.profiles.include=local,release,jwt
+spring.profiles.include=release,jwt
 
 spring.servlet.multipart.max-file-size=10MB
